092_lls/grade.txt
Grading at 11/11/2022:06:37:22.085288
For commit ID 2664b60609cfbd5e080d9ec448f1a7636fc1c9ae
Grading at Fri Nov 11 01:37:21 AM EST 2022
-----------------------------------------------
testcase 1 : Testing with LinkedList<int>
...compiling...
In file included from tester.cpp:1:
ll.hpp: In member function ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&)’:
ll.hpp:42:12: error: ‘swap’ is not a member of ‘std’
   42 |       std::swap(temp.head, head);
      |            ^~~~
ll.hpp:43:12: error: ‘swap’ is not a member of ‘std’
   43 |       std::swap(temp.tail, tail);
      |            ^~~~
ll.hpp:44:12: error: ‘swap’ is not a member of ‘std’
   44 |       std::swap(temp.size, size);
      |            ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with LinkedList<std::string>
...compiling...
In file included from tester.cpp:1:
ll.hpp: In member function ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&)’:
ll.hpp:42:12: error: ‘swap’ is not a member of ‘std’
   42 |       std::swap(temp.head, head);
      |            ^~~~
ll.hpp:43:12: error: ‘swap’ is not a member of ‘std’
   43 |       std::swap(temp.tail, tail);
      |            ^~~~
ll.hpp:44:12: error: ‘swap’ is not a member of ‘std’
   44 |       std::swap(temp.size, size);
      |            ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with LinkedList<(a custom class we wrote)>
...compiling...
In file included from tester.cpp:1:
ll.hpp: In member function ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&)’:
ll.hpp:42:12: error: ‘swap’ is not a member of ‘std’
   42 |       std::swap(temp.head, head);
      |            ^~~~
ll.hpp:43:12: error: ‘swap’ is not a member of ‘std’
   43 |       std::swap(temp.tail, tail);
      |            ^~~~
ll.hpp:44:12: error: ‘swap’ is not a member of ‘std’
   44 |       std::swap(temp.size, size);
      |            ^~~~
The code did not compile.  This test failed.

Overall Grade: F
